examples/bad/07-none-declaration.mw
func myFunc() -> void print "myFunc";
var x void = myFunc(); // Invalid type declaration
